# networking-fundamentals

./: .gitignore  .pylintrc  README.md  pyproject.toml
src/networking/: network_utilities.py
src/networking/network_devices/: __init__.py  device.py  host.py  router.py  switch.py
src/networking/network_topologies/: internet.py  local.py  main.py
tests/network_devices/: test_device.py  test_switch.py
