[tool.poetry]
name = "networking"
version = "0.1.0"
description = ""
authors = ["eechava66 <esteban.ec123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
pylint = "^2.17.2"
pyright = "^1.1.303"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
    /(
        \.eggs
      | \.git
      | \.hg
      | \.mypy_cache
      | \.nox
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
'''
