[tool.poetry]
name = "networking"
version = "0.1.0"
description = ""
authors = ["eechava66 <esteban.ec123@gmail.com>"]
readme = "README.md"
packages = [ { include = "networking", from = "src"  }]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
pylint = "^2.17.2"
pyright = "^1.1.303"
pytest = "^7.3.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88
docstring-style = "google"

[tool.isort]
# Line length
line_length = 88
profile = "black"

# Force vertical/horizontal whitespace where necessary
force_grid_wrap = true
use_parentheses = true
ensure_newline_before_comments = true

# Ordering of imports
multi_line_output = 3
include_trailing_comma = true
force_sort_within_sections = true